--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@ footer p{
   text-align: center;
   padding-top: 15px;
   padding-bottom: 20px;
+  color: #f2f2f2;
 }
 .nav a{
   display: inline-block;
